--- a/design_five.css
+++ b/design_five.css
@@ -14,21 +14,35 @@
     width: inherit;
     height: 100vh;
     font-family: "My Custom Font" , Verdana,  Tahoma;
-    color: rgb(5, 5, 52);
+    color: rgba(5, 5, 52, 0.675);
 
     
 }
 .upper_bar{
     display: flex;
-    height: 50px;
+    min-height: 55px;
     min-width: fit-content;
     background: white;
-    justify-content: right;
-    padding-left: 20px;
+    justify-content: space-between;
+    padding-left: 45px;
     padding-right: 60px;
     align-items: center;
+    margin-right: -511px;
 
 }
+.upper_bar_right{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 50px;
+    
+}
+.upper_bar_text{
+    padding-left: 10px;
+    font-size: x-small;
+    justify-content: flex-end;
+}
+
 .main{
     display: flex;
     flex-direction: row;
@@ -36,36 +50,17 @@
 .navigation_bar{
     display: flex;
     flex-direction: column;
-    background-color: rgba(205, 205, 205, 0.2);
+    background-color: rgba(255, 255, 255, 0.781);
     min-width: fit-content;
     min-height:94vh;
     padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 10px;
 }
-.nav_bar_item_one{
+.nav_bar_item{
     display: flex;
 }
-.nav_bar_item_two{
-    display: flex;
-    
-}
-.nav_bar_item_three{
-    display: flex;
-}
-.nav_bar_item_four{
-    display: flex;
-}
-.nav_bar_item_five{
-    display: flex;
-}
-.nav_bar_item_six{
-    display: flex;
-}
-.nav_bar_item_seven{
-    display: flex;
-}
-.nav_bar_item_eight{
-    display: flex;
-}
+
 
 
 
@@ -75,17 +70,18 @@
     row-gap: 10px;
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 15px;
+    padding-top: 17px;
 
    
 }
 .nav_bar_text{
     display: flex;
     row-gap: 10px;
-    padding-top: 15px;
+    padding-top: 17px;
     padding-left: 10px;
-    font-size: smaller;
+    font-size: small;
     color: rgba(179, 182, 197, 0.733);
+    font-weight: bold;
 }
 .nav_bar_text:hover{
      color: rgb(5, 5, 52);;
@@ -93,11 +89,12 @@
 
 .upper_bar_two{
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: center;
     height: fit-content;
     width: 100%;
     padding-bottom: 10px;
+    padding-top: 5px;
     
     
     
@@ -105,7 +102,7 @@
 
 .upper_bar_two_box{
     background: rgb(255, 255, 255);
-    width: 40%;
+    width: 26%;
     display: flex;
     flex-direction: row;
     border-radius: 7px;
@@ -126,27 +123,32 @@
     font-size: small;
 }
 .upper_bar_two_box_three{
-    background: rgb(236, 182, 45);
-    min-width: fit-content;
+    background: rgba(255, 194, 40, 0.644);
+    min-width: max-content;
     display: flex;
     flex-direction: row;
     border-radius: 7px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-left: 22px;
+    padding-right: 22px;
+    padding-top: 9px;
+    padding-bottom: 9px;
     font-size: small;
     font-weight: bold;
+    color: rgba(5, 5, 52, 0.629);;
+    
+    
+    
 }
 .upper_bar_two_headtext{
     padding-left: 20px;
-    padding-top: 15px;
     padding-right: 5px;
     font-size: small;
 }
 .upper_bar_two_subtext{
     width: 25%;
-    font-size: small;
+    font-size: x-small;
+    color: rgba(5, 5, 52, 0.448);;
+    font-weight: bold;
 }
 .upper_bar_two_search{
     padding-right: 20px;
@@ -154,7 +156,7 @@
     width: 50%;
     border-radius: 7px;
     margin-right: 10px;
-
+    border: none;
     
 }
 .upper_bar_two_search input{
@@ -169,7 +171,16 @@
     padding-right: 30px;
     padding-bottom: 10px;
     padding-top: 10px;
-    padding-left: 30px;font-size: small;
+    padding-left: 20px;
+    font-size: small;
+    color: rgba(5, 5, 52);
+}
+.upper_bar_two_sat{
+    color: rgba(5, 5, 52);
+    font-weight: lighter;
+    font-size: xx-small;
+
+
 
 }
 .upper_bar_two_arrow{
@@ -177,215 +188,228 @@
 }
 
 .nav_bar_logout{
-    margin-top: 300px;
+    padding-top: 250px;
     display: flex;
     flex-direction: row;
     align-items: end;
+    display: flex;
+    row-gap: 10px;
+    padding-left: 10px;
+    font-size: small;
+    
+}
+.nav_bar_logout_text{
+    color: red;
 }
 .upper_bar_three{
     font-size: small;
     padding-left: 50px;
     padding-top: 5px;
     display: flex;
+    flex-direction: row;
+    border-radius: 7px;
     
     
 }
-.column_one{
+.column_main_1{
     padding: 10px;
     background: white;
     min-width: fit-content;
     height: 50px;
+    display: flex;
+    align-items: center;
+    color: rgba(21, 6, 58, 0.422);
+    min-width: 20%;
+    border-radius: 7px;
 }
-@media(min-width:400px) {
-    .background{
-        display: flex;
-        flex-direction: column;
-        background: rgb(241, 241, 241);
-        width: inherit;
-        height: inherit;
-        font-family: "My Custom Font" , Verdana,  Tahoma;
-        color: rgb(5, 5, 52);
-    
-        
-    }
-    .upper_bar{
-        display: flex;
-        height: 50px;
-        min-width: fit-content;
-        background: white;
-        justify-content: right;
-        padding-left: 20px;
-        padding-right: 60px;
-        align-items: center;
-    
-    }
-    .main{
-        display: flex;
-        flex-direction: row;
-    }
-    .navigation_bar{
-        display: flex;
-        flex-direction: column;
-        background-color: rgba(205, 205, 205, 0.2);
-        min-width: fit-content;
-        min-height:94vh;
-        padding-left: 10px;
-    }
-    .nav_bar_item_one{
-        display: flex;
-    }
-    .nav_bar_item_two{
-        display: flex;
-        
-    }
-    .nav_bar_item_three{
-        display: flex;
-    }
-    .nav_bar_item_four{
-        display: flex;
-    }
-    .nav_bar_item_five{
-        display: flex;
-    }
-    .nav_bar_item_six{
-        display: flex;
-    }
-    .nav_bar_item_seven{
-        display: flex;
-    }
-    .nav_bar_item_eight{
-        display: flex;
-    }
-    
-    
-    
-    
-    .nav_bar_icon {
-        display: flex;
-        row-gap: 10px;
-        padding-left: 10px;
-        padding-right: 1opx;
-        padding-top: 10px;
-        width: 15px;
-    
-       
-    }
-    .nav_bar_text{
-        display: flex;
-        padding-top: 10px;
-        padding-left: 5px;
-        font-size: x-small;
-        color: rgba(179, 182, 197, 0.733);
-    }
-    .nav_bar_text:hover{
-         color: rgb(5, 5, 52);;
-    }
-    
-    .upper_bar_two{
-        display: flex;
-        align-items: baseline;
-        justify-content: center;
-        height: fit-content;
-        width: 100%;
-        padding-bottom: 10px;
-        
-        
-        
-    }
-    
-    .upper_bar_two_box{
-        background: rgb(255, 255, 255);
-        width: 40%;
-        display: flex;
-        flex-direction: row;
-        border-radius: 7px;
-        margin-right: 20px;
-    
-    }
-    .upper_bar_two_box_two{
-        background: rgb(255, 255, 255);
-        min-width: fit-content;
-        display: flex;
-        flex-direction: row;
-        border-radius: 7px;
-        padding-left: 30px;
-        padding-right: 30px;
-        margin-right: 20px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        font-size: small;
-    }
-    .upper_bar_two_box_three{
-        background: rgb(236, 182, 45);
-        min-width: fit-content;
-        display: flex;
-        flex-direction: row;
-        border-radius: 7px;
-        padding-left: 30px;
-        padding-right: 30px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        font-size: small;
-        font-weight: bold;
-    }
-    .upper_bar_two_headtext{
-        padding-left: 20px;
-        padding-top: 15px;
-        padding-right: 5px;
-        font-size: x-small;
-    }
-    .upper_bar_two_subtext{
-        width: 25%;
-        font-size: x-small;
-    }
-    .upper_bar_two_search{
-        padding-right: 20px;
-        background: white;
-        width: 50%;
-        border-radius: 7px;
-        margin-right: 10px;
-    
-        
-    }
-    .upper_bar_two_search input{
-        border: none;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        border-radius: 7px;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-    .upper_bar_two_dates{
-        padding-right: 30px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        padding-left: 30px;font-size: x-small;
-    
-    }
-    .upper_bar_two_arrow{
-        width: 40px;
-    }
-    
-    .nav_bar_logout{
-        margin-top: 300px;
-        display: flex;
-        flex-direction: row;
-        align-items: end;
-    }
-    .upper_bar_three{
-        font-size: small;
-        padding-left: 50px;
-        padding-top: 5px;
-        display: flex;
-        
-        
-    }
-    .column_one{
-        padding: 10px;
-        background: white;
-        min-width: fit-content;
-        height: 50px;
-    }
+.column_main_2{
+    padding: 10px;
+    background: white;
+    min-width: fit-content;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: rgba(21, 6, 58, 0.422);
+    min-width: 25%;
 
-    
+}
+.column_main_3{
+    padding: 10px;
+    background: white;
+    min-width: fit-content;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: rgba(21, 6, 58, 0.422);
+    min-width: 1px;
+    max-width: 6%;
+
+}
+.column_main_4{
+    padding: 10px;
+    background: white;
+    min-width: fit-content;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: rgba(21, 6, 58, 0.422);
+    min-width: 25%;
+
+}
+.column_main_5{
+    padding: 10px;
+    background: white;
+    min-width: fit-content;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: rgba(21, 6, 58, 0.422);
+    min-width: 1px;
+    max-width: 6%;
+
+}
+.column_main_6{
+    padding: 10px;
+    background: white;
+    min-width: fit-content;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: rgba(21, 6, 58, 0.422);
+    min-width: 6%;
+    border-radius: 7px;
+
+}
+::placeholder{
+    color: rgba(186, 183, 183, 0.611);
+}
+.upper_bar_column{
+    display: flex;
+    flex-direction: column;
+    min-width: 85%;
+}
+.upper_bar_four{
+    font-size: small;
+    padding-left: 50px;
+    display: flex;
+    flex-direction: row;
+}   
+.column_main_7{
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.781);
+    min-width: fit-content;
+    height: 400px;
+    display: flex;
+    color: rgba(3, 3, 33, 0.862);
+    min-width: 20%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 7px;
+
+} 
+.column_main_7 label{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+
+}
+.column_main_8{
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.781);
+    min-width: fit-content;
+    height: 400px;
+    display: flex;
+    color: rgba(3, 3, 33, 0.862);
+    min-width: 20%;
+    max-width: 25%;
+    flex-direction: column;
+} 
+.column_main_8 label{
+    padding-top: 13px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    align-items: center;
+
+
+}
+.column_main_9{
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.781);
+    min-width: fit-content;
+    height: 400px;
+    display: flex;
+    color: rgba(3, 3, 33, 0.862);
+    min-width: 6%;
+    flex-direction: column;
+
+}
+.column_main_9 label{
+    padding-top: 16px;
+    padding-bottom: 14px;
+    padding-left: 5px;
+    padding-right: 5px;
+    align-items: center;
+
+
+}
+.column_main_10{
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.781);
+    min-width: fit-content;
+    height: 400px;
+    display: flex;
+    color: rgba(3, 3, 33, 0.862);
+    min-width: 17%;
+    max-width: 25%;
+    flex-direction: column;
+
+}
+.column_main_10 label{
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 5px;
+    padding-right: 5px;
+    align-items: center;
+
+}
+.column_main_11{
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.781);
+    min-width: fit-content;
+    height: 400px;
+    display: flex;
+    color: rgba(3, 3, 33, 0.862);
+    min-width: 6%;
+    flex-direction: column;
+}
+.column_main_11 label{
+    padding-top: 16px;
+    padding-bottom: 14px;
+    padding-left: 5px;
+    padding-right: 5px;
+    align-items: center;
+
+
+}
+.column_main_12{
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.781);
+    min-width: fit-content;
+    height: 400px;
+    display: flex;
+    color: rgba(3, 3, 33, 0.862);
+    min-width: 6%;
+    flex-direction: column;
+    border-radius: 7px;
+}
+.column_main_12 label{
+    padding-top: 16px;
+    padding-bottom: 14px;
+    padding-left: 5px;
+    padding-right: 5px;
+    align-items: center;
+
+
 }
