--- a/design_six.css
+++ b/design_six.css
@@ -9,7 +9,7 @@
 .column-1{
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+
     min-width: 25%;
     max-width: 25%;
     border: 1px solid gainsboro;
@@ -22,7 +22,8 @@
 }
 .nav-bar-2{
     display: flex;
-    min-height: 50px;
+    min-height: 43px;
+    max-height: 43px;
     background: rgba(108, 162, 162, 0.681);
     align-items: center;
     padding-top: 5px;
@@ -33,6 +34,7 @@
     flex-direction: column;
     min-width: 75%;
     max-width: 75%;
+    max-height: 75vh;
     min-height: 100vh;
     background: rgba(180, 243, 236, 0.451);
 }
@@ -44,6 +46,11 @@
 .nav-bar-contents-right{
     display: flex;
     justify-content: end;
+}
+.nav-bar-contents-right img{
+    display: flex;
+    justify-content: end;
+    padding-left: 5px;
 }
 .nav-bar-contents{
     display: flex;
@@ -61,7 +68,7 @@
     padding-right: 100px;
     padding-top: 5px;
     padding-bottom: 5px;
-    background: rgba(108, 162, 162, 0.401);
+    background: rgba(245, 245, 245, 0.44);
 }
 .nav-bar-chat-1{
     padding-top: 5px;
@@ -170,13 +177,22 @@
     display: flex;
     justify-content: end;
     padding-right: 20px;
+    padding-left: 10px;
+    
+}
+.nav-bar-2-right img{
+    display: flex;
+    justify-content: end;
+    padding-right: 5px;
+    padding-left: 5px;
     
 }
 .column-2-contents{
     padding-left: 10px;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    max-height: 83vh;
+    min-height: 83vh;
     padding-top: 15px;
 }
 .time-one{
@@ -199,6 +215,10 @@
 .convo{
     border: 1px solid;
     border-radius: 7px;
+    padding-left: 13px;
+    padding-right: 13px;
+    padding-top: 5px;
+    padding-bottom: 10px;
 
 }
 .chat-1 img{
@@ -209,13 +229,18 @@
     flex-direction: row-reverse;
     justify-content: end;
 }
+.chat-2 img{
+    padding-right: 10px;
+    padding-left: 10px;
+}
 .column-2-search input{
     padding-left: 10px;
     padding-right: 710px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 17px;
-    background: whitesmoke;
+    background: rgba(245, 245, 245, 0.442);
+    
 
 
 }
@@ -226,13 +251,38 @@
     align-items: center
 }
 .nav-bar-3{
-    margin-top: 250px;
     display: flex;
     min-height: 50px;
     background: rgba(108, 162, 162, 0.681);
     align-items: center;
     padding-top: 5px;
-    padding-left: 10px;
-    justify-content: center;
+    padding-left: 20px;
 
+
+}
+.convo label{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+
+}
+.time-one-missed-call{
+    height: 23px;
+    background: white;
+    max-width: 228px;
+    display: flex;
+    flex-direction: row;
+    justify-content:center ;
+    align-items: center;
+    margin-left: 406px;
+    border-radius: 5px;
+    margin-top: 10px;
+    min-width: 228px;
+
+}
+.time-one-missed-call img{
+    padding-right: 10px;
+}
+.nav-bar-3 img{
+    padding-right: 13px;
 }
