--- a/design_five.css
+++ b/design_five.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     background: rgb(241, 241, 241);
     width: inherit;
-    height: 100vh;
+    height: 99vh;
     font-family: "My Custom Font" , Verdana,  Tahoma;
     color: rgba(5, 5, 52, 0.675);
 
@@ -20,6 +20,7 @@
 }
 .upper_bar{
     display: flex;
+    max-width: 92%;
     min-height: 55px;
     min-width: fit-content;
     background: white;
@@ -27,7 +28,6 @@
     padding-left: 45px;
     padding-right: 60px;
     align-items: center;
-    margin-right: -511px;
 
 }
 .upper_bar_right{
@@ -35,6 +35,7 @@
     justify-content: flex-end;
     align-items: center;
     margin-left: 50px;
+    width: 2%;
     
 }
 .upper_bar_text{
@@ -60,28 +61,23 @@
 .nav_bar_item{
     display: flex;
 }
-
-
-
-
-
 .nav_bar_icon {
     display: flex;
     row-gap: 10px;
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 17px;
+    padding-top: 25px;
 
    
 }
 .nav_bar_text{
     display: flex;
     row-gap: 10px;
-    padding-top: 17px;
+    padding-top: 25px;
     padding-left: 10px;
     font-size: small;
     color: rgba(179, 182, 197, 0.733);
-    font-weight: bold;
+    font-weight: 540;
 }
 .nav_bar_text:hover{
      color: rgb(5, 5, 52);;
@@ -111,11 +107,12 @@
 }
 .upper_bar_two_box_two{
     background: rgb(255, 255, 255);
-    min-width: fit-content;
+    min-width: 20px;
+    max-width: 40px;
     display: flex;
     flex-direction: row;
     border-radius: 7px;
-    padding-left: 30px;
+    padding-left: 10px;
     padding-right: 30px;
     margin-right: 20px;
     padding-top: 10px;
@@ -123,7 +120,7 @@
     font-size: small;
 }
 .upper_bar_two_box_three{
-    background: rgba(255, 194, 40, 0.644);
+    background: rgba(255, 194, 40, 0.482);
     min-width: max-content;
     display: flex;
     flex-direction: row;
@@ -134,7 +131,7 @@
     padding-bottom: 9px;
     font-size: small;
     font-weight: bold;
-    color: rgba(5, 5, 52, 0.629);;
+    color: rgba(5, 5, 52, 0.796);;
     
     
     
@@ -155,7 +152,7 @@
     background: white;
     width: 50%;
     border-radius: 7px;
-    margin-right: 10px;
+    margin-right: 5px;
     border: none;
     
 }
@@ -186,9 +183,11 @@
 .upper_bar_two_arrow{
     width: 40px;
 }
-
+.upper_bar_two_arrow img{
+    padding-top: 15px;
+}
 .nav_bar_logout{
-    padding-top: 250px;
+    padding-top: 160px;
     display: flex;
     flex-direction: row;
     align-items: end;
@@ -200,6 +199,20 @@
 }
 .nav_bar_logout_text{
     color: red;
+}
+.nav_bar_collapse{
+    padding-top: 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    display: flex;
+    row-gap: 10px;
+    padding-left: 10px;
+    font-size: small;
+    
+}
+.nav_bar_collapse_text{
+    color: rgba(13, 16, 92, 0.518);
 }
 .upper_bar_three{
     font-size: small;
@@ -412,4 +425,24 @@
     align-items: center;
 
 
+}
+
+.upper_bar_box_driv img{
+    width: 5%;
+}
+.upper_bar_box_driv img{
+    display: flex;
+    flex-direction: row;
+    min-width:23px;
+    max-width: 100%;
+}
+.upper_bar_box_driv{
+    display: flex;
+    flex-direction: row;
+}
+.add-sign{
+    display: flex;
+    max-width: 20%;
+    max-height: 15px;
+    background: white;
 }
